# widget_idget

./: .gitignore  Dockerfile  Makefile  README.md  app.py  create_iam_policies.sh  pyproject.toml
.github/workflows/: build-and-test.yml  deploy.yml
widget_idget/: ui.py
widget_idget/sportsdataio/: games.py  response.py
widget_idget/sportsdataio/models/: series_info.py  teams.py
